<resources>
    <string name="app_name">Hello</string>
    <string name="teamName_b">Team B</string>
    <string name="teamName_a">Team A</string>
    <string name="zero">0</string>
    <string name="btn1_label">+1 points</string>
    <string name="btn2_label">+2 points</string>
    <string name="btn3_label">+3 points</string>
    <string name="btn_reset">reset</string>
    <string name="hello_first_fragment" />
    <string name="previous" />
    <dimen name="fab_margin" />
    <string name="input">input rmb</string>
    <string name="output">output</string>
    <string name="btn_dollar">dollar</string>
    <string name="btn_euro">euro</string>
    <string name="btn_won">won</string>
    <string name="btn_config">config</string>
    <string name="btn_save">save</string>
    <string name="menu_setting">setting</string>
    <string name="menu_item">item</string>

</resources>