<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="24dp"
        android:hint="@string/input" />

    <TextView
        android:id="@+id/output"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output" />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="click"
        android:text="@string/btn_dollar" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/btn_euro" />

    <Button
        android:id="@+id/btn_won"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="click"
        android:text="@string/btn_won" />

    <Button
        android:id="@+id/btn_config"
        android:onClick="openConFig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="config" />
</LinearLayout>