<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity2">

    <LinearLayout
        android:layout_width="417dp"
        android:layout_height="590dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@id/textView4"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="50sp"
            android:text="@string/teamname" />

        <TextView
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="72sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="button4"
            android:text="@string/btn1_label" />

        <Button
            android:id="@+id/button7"
            android:layout_marginTop="24dp"
            android:onClick="button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2_label" />

        <Button
            android:layout_marginTop="24dp"
            android:onClick="button8"
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3_label" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:onClick="button3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/btn_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>