<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@id/textView4"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="50sp"
            android:text="@string/teamname" />

        <TextView
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="72sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="button4"
            android:text="@string/btn1_label" />

        <Button
            android:id="@+id/button7"
            android:layout_marginTop="24dp"
            android:onClick="button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2_label" />

        <Button
            android:layout_marginTop="24dp"
            android:onClick="button8"
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3_label" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@id/textView4"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="50sp"
            android:text="@string/teamname" />

        <TextView
            android:id="@+id/textView4"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="72sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="button4"
            android:text="@string/btn1_label" />

        <Button
            android:id="@+id/button7"
            android:layout_marginTop="24dp"
            android:onClick="button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2_label" />

        <Button
            android:layout_marginTop="24dp"
            android:onClick="button8"
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3_label" />

    </LinearLayout>

</LinearLayout>